# stick9p

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  ISSUES.md  LICENSE  Makefile  README.md  USAGE.md
.cargo/: config.toml
devices/: Cargo.toml
devices/src/: buttons.rs  buzzer.rs  display.rs  font8x8.rs  gpio.rs  i2c1.rs  imu.rs  led.rs  lib.rs  memfs.rs  mic.rs  power.rs  spk.rs  task.rs  wasm.rs
firmware/: Cargo.toml
firmware/src/: board.rs  boot_gate.rs  led_task.rs  lib.rs  nvs.rs
firmware/src/dev/: gpio.rs  i2c1.rs  mic.rs  mod.rs  plus2.rs  sticks3.rs  wasm_core.rs
firmware/src/net/: buffers.rs  mod.rs  provision.rs  runner.rs  services.rs  sta.rs  sticks3_wifi.rs
firmware/src/transport/: ws.rs
ninep/: Cargo.toml
ninep/src/: buffers.rs  fs.rs  lib.rs  readme.rs  server.rs  vfs.rs  vfs_ffi.rs  wire.rs
scripts/: build-wasm-demo.sh  setup.sh
tools/stick9p-bridge/: Cargo.toml
tools/stick9p-bridge/src/: main.rs
wamr-sys/: Cargo.toml  build.rs
wamr-sys/c/: stick_wamr.c  stick_wamr.h
wamr-sys/examples/: run_demo.rs
wamr-sys/platform/stick/: platform_internal.h  shared_platform.cmake  stick_libc.c  stick_malloc.c  stick_memmap.c  stick_platform.c  stick_sleep.c  stick_thread.c  stick_thread_stub.c  stick_wasi_clock.c  stick_wasi_file.c  stick_wasi_libc.c  stick_wasi_socket.c
wamr-sys/src/: lib.rs
wasm/demo/: .gitignore  Makefile  main.go
wasm/tinygo/: .gitignore  Makefile  go.mod  main.go
wasm/zig/: .gitignore  main.zig
