[package]
name = "ninep"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "no_std 9P2000 codec and server for Stick devices"

[dependencies]
devices = { path = "../devices" }
embedded-io = "0.7.1"
embedded-io-async = { version = "0.7.0", optional = true }
embassy-time = { version = "0.5.0", optional = true }
embassy-futures = { version = "0.1.2", optional = true }
heapless = "0.8"
critical-section = { version = "1.2", optional = true }
esp-println = { version = "0.17", optional = true, default-features = false }

[features]
default = ["server"]
server = ["dep:embedded-io-async", "dep:embassy-time", "dep:embassy-futures"]
log = ["dep:esp-println"]
wamr = ["devices/wamr", "dep:critical-section"]
