[workspace]

[package]
name = "stick9p-bridge"
edition = "2024"
version = "0.1.0"
license = "MIT"
description = "Host-side bridge: re-export StickS3 CDC/BLE as TCP for mount -t 9p"

[[bin]]
name = "stick9p-bridge"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
